--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -95,6 +95,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusBarEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBarEx.Designer.cs" />
+    <Compile Include="StatusMessage.cs" />
     <Compile Include="VsmdController.cs" />
     <EmbeddedResource Include="BoardSettingFrm.resx">
       <DependentUpon>BoardSettingFrm.cs</DependentUpon>
@@ -126,6 +131,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="html\boardSetting.html" />
+    <Content Include="html\css\boardSetting.css" />
     <Content Include="html\css\bootstrap-theme.css" />
     <Content Include="html\css\bootstrap-theme.min.css" />
     <Content Include="html\css\bootstrap.min.css" />
@@ -134,6 +141,8 @@
     <Content Include="html\css\jquery-ui.structure.css" />
     <Content Include="html\css\jquery-ui.theme.css" />
     <Content Include="html\css\style.css" />
+    <Content Include="html\css\tubeGrid.css" />
+    <Content Include="html\js\boardSetting.js" />
     <Content Include="html\js\bootstrap.min.js" />
     <Content Include="html\js\box-selection.js" />
     <Content Include="html\js\contextMenu.js" />
