--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -87,6 +87,12 @@
     </Compile>
     <Compile Include="BoardSettings.cs" />
     <Compile Include="BridgeObject.cs" />
+    <Compile Include="ConnectVsmd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConnectVsmd.Designer.cs">
+      <DependentUpon>ConnectVsmd.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     </Compile>
     <EmbeddedResource Include="BoardSettingFrm.resx">
       <DependentUpon>BoardSettingFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConnectVsmd.resx">
+      <DependentUpon>ConnectVsmd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
