--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -85,7 +85,7 @@
     <Compile Include="BoardSettingFrm.Designer.cs">
       <DependentUpon>BoardSettingFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="BoardSettings.cs" />
+    <Compile Include="BoardSetting.cs" />
     <Compile Include="BridgeObject.cs" />
     <Compile Include="ConnectVsmd.cs">
       <SubType>Form</SubType>
@@ -101,6 +101,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetTubePosiion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetTubePosiion.Designer.cs">
+      <DependentUpon>SetTubePosiion.cs</DependentUpon>
+    </Compile>
     <Compile Include="StatusBarEx.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -131,6 +137,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SetTubePosiion.resx">
+      <DependentUpon>SetTubePosiion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VsmdSettingFrm.resx">
       <DependentUpon>VsmdSettingFrm.cs</DependentUpon>
     </EmbeddedResource>
