--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -99,6 +99,12 @@
     <Compile Include="MainFrm.Designer.cs">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MaskLayer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MaskLayer.Designer.cs">
+      <DependentUpon>MaskLayer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetTubePosiion.cs">
@@ -107,11 +113,23 @@
     <Compile Include="SetTubePosiion.Designer.cs">
       <DependentUpon>SetTubePosiion.cs</DependentUpon>
     </Compile>
+    <Compile Include="SetTubePositionFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetTubePositionFrm.Designer.cs">
+      <DependentUpon>SetTubePositionFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="StatusBarEx.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="StatusBarEx.Designer.cs" />
     <Compile Include="StatusBar.cs" />
+    <Compile Include="TextBoxEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TextBoxEx.Designer.cs">
+      <DependentUpon>TextBoxEx.cs</DependentUpon>
+    </Compile>
     <Compile Include="VsmdController.cs" />
     <Compile Include="VsmdSettingFrm.cs">
       <SubType>Form</SubType>
@@ -128,6 +146,9 @@
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MaskLayer.resx">
+      <DependentUpon>MaskLayer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -139,6 +160,9 @@
     </Compile>
     <EmbeddedResource Include="SetTubePosiion.resx">
       <DependentUpon>SetTubePosiion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SetTubePositionFrm.resx">
+      <DependentUpon>SetTubePositionFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VsmdSettingFrm.resx">
       <DependentUpon>VsmdSettingFrm.cs</DependentUpon>
