--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -93,6 +93,12 @@
     <Compile Include="ConnectVsmd.Designer.cs">
       <DependentUpon>ConnectVsmd.cs</DependentUpon>
     </Compile>
+    <Compile Include="ItemListFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemListFrm.Designer.cs">
+      <DependentUpon>ItemListFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConnectVsmd.resx">
       <DependentUpon>ConnectVsmd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemListFrm.resx">
+      <DependentUpon>ItemListFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
