--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -99,6 +99,12 @@
     <Compile Include="ItemListFrm.Designer.cs">
       <DependentUpon>ItemListFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DripFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DripFrm.Designer.cs">
+      <DependentUpon>DripFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,17 +131,7 @@
     <Compile Include="SetTubePositionFrm.Designer.cs">
       <DependentUpon>SetTubePositionFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="StatusBarEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="StatusBarEx.Designer.cs" />
     <Compile Include="StatusBar.cs" />
-    <Compile Include="TextBoxEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="TextBoxEx.Designer.cs">
-      <DependentUpon>TextBoxEx.cs</DependentUpon>
-    </Compile>
     <Compile Include="VsmdController.cs" />
     <Compile Include="VsmdSettingFrm.cs">
       <SubType>Form</SubType>
@@ -151,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ItemListFrm.resx">
       <DependentUpon>ItemListFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DripFrm.resx">
+      <DependentUpon>DripFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
@@ -219,6 +218,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="html\icon\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VsmdWorkstation.Controls\VsmdWorkstation.Controls.csproj">
+      <Project>{feb64d6c-52c5-4487-b143-19ec668b69e8}</Project>
+      <Name>VsmdWorkstation.Controls</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
