--- a/VsmdWorkstation.Controls/VsmdWorkstation.Controls.csproj
+++ b/VsmdWorkstation.Controls/VsmdWorkstation.Controls.csproj
@@ -42,6 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ButtonEx.Designer.cs">
+      <DependentUpon>ButtonEx.cs</DependentUpon>
+    </Compile>
     <Compile Include="StatusBarEx.cs">
       <SubType>Component</SubType>
     </Compile>
