--- a/VsmdWorkstation.Controls/VsmdWorkstation.Controls.csproj
+++ b/VsmdWorkstation.Controls/VsmdWorkstation.Controls.csproj
@@ -42,9 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ButtonEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="ButtonEx.cs" />
     <Compile Include="ButtonEx.Designer.cs">
       <DependentUpon>ButtonEx.cs</DependentUpon>
     </Compile>
