support preference(connection info, layout) support auto connect

--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="BoardSetting\BoardSetting.cs" />
     <Compile Include="Drip\BridgeObject.cs" />
+    <Compile Include="preference\Preferences.cs" />
     <Compile Include="VSMDSetting\ConnectVsmd.cs">
       <SubType>Form</SubType>
     </Compile>
