--- a/VsmdWorkstation/App.config
+++ b/VsmdWorkstation/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <appSettings>
-    <add key="PumpExist" value="false"/>
+    <add key="PumpExist" value="true"/>
   </appSettings>
 </configuration>
