--- a/VsmdWorkstation/VsmdWorkstation.csproj
+++ b/VsmdWorkstation/VsmdWorkstation.csproj
@@ -90,9 +90,12 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -102,6 +105,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutBox.cs">
@@ -120,6 +124,18 @@
     <Compile Include="Drip\BridgeObject.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="preference\Preferences.cs" />
+    <Compile Include="Record\DatePicker.xaml.cs">
+      <DependentUpon>DatePicker.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Record\ProjectInfoCollection.cs" />
+    <Compile Include="Record\RunHistory.xaml.cs">
+      <DependentUpon>RunHistory.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Record\RunInfoModel.cs" />
+    <Compile Include="Record\RunResult.cs" />
+    <Compile Include="Record\SetProject.xaml.cs">
+      <DependentUpon>SetProject.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VSMDSetting\ConnectVsmd.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,7 +234,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="drip.ico" />
@@ -248,6 +266,10 @@
     <Folder Include="html\icon\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RunInfoManager\RunInfoManager.csproj">
+      <Project>{dc84484a-dbed-468d-a931-7aa762e4cbea}</Project>
+      <Name>RunInfoManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VsmdLib\VsmdLib.csproj">
       <Project>{4e8b8537-a816-4731-979a-7c0a88bf7ec5}</Project>
       <Name>VsmdLib</Name>
@@ -268,6 +290,20 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Record\DatePicker.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Record\RunHistory.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Record\SetProject.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
